# ai-apprentice

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCTIZATION_FOCUS.md  PRODUCT_HANDOFF.md  PROJECT_TAKEOVER_ASSESSMENT.md  README.md  RELEASE_NOTES.md  SECURITY.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.typecheck.json
docs/: architecture.md  (+4 more)
plugins/transparent-ai-apprentice/integrations/aicad-agent-v1/plugin/aicad-agent/: .mcp.json  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-qa.txt
plugins/transparent-ai-apprentice/integrations/aicad-agent-v1/plugin/aicad-agent/.codex-plugin/: plugin.json
plugins/transparent-ai-apprentice/integrations/aicad-agent-v1/plugin/aicad-agent/installers/: build-solidworks-host.ps1  install-codex-plugin.ps1  install.ps1  test-autocad.ps1  uninstall.ps1
plugins/transparent-ai-apprentice/integrations/aicad-agent-v1/plugin/aicad-agent/rules/: packaging_dieline_rules.json
plugins/transparent-ai-apprentice/integrations/aicad-agent-v1/plugin/aicad-agent/runtime/docs/: UPSTREAM_README.md  agent-plugin.md  architecture.md  protocol.md  real-host-validation.md  solidworks-3d-research.md
plugins/transparent-ai-apprentice/integrations/aicad-agent-v1/plugin/aicad-agent/scripts/: aicad_agent.py  aicad_packaging_qa.py
plugins/transparent-ai-apprentice/integrations/aicad-agent-v1/plugin/aicad-agent/tests/: test_agent_plugin.py  test_engine.py  test_engine3d.py  test_packaging_dieline_rules.py
(+1575 files in other folders)
